@@ -18,7 +18,6 @@
  */
 package io.vertigo.studio.metamodel.vertigo.java;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.junit.jupiter.api.AfterEach;
@@ -51,9 +50,9 @@ public final class JavaParserStereotypesTest2 {
 		app = new AutoCloseableApp(buildNodeConfig());
 		DIInjector.injectMembers(this, app.getComponentSpace());
 		//---
-		final List<MetamodelResource> resources = Arrays.asList(
-				new MetamodelResource("kpr", "io/vertigo/studio/metamodel/vertigo/java/data/execution.kpr"),
-				new MetamodelResource("classes", "io.vertigo.studio.metamodel.vertigo.java.data.domain.*"));
+		final List<MetamodelResource> resources = List.of(
+				MetamodelResource.of("kpr", "io/vertigo/studio/metamodel/vertigo/java/data/execution.kpr"),
+				MetamodelResource.of("classes", "io.vertigo.studio.metamodel.vertigo.java.data.domain.*"));
 		definitionSpace = app.getComponentSpace().resolve(StudioMetamodelManager.class).parseResources(resources);
 	}
 
